# lib_hdf4

./: .gitignore  CMakeInstallation.cmake  CMakeLists.txt  README.txt
cmake/: FindExtSZIP.cmake  PackageConfig.cmake.in  configure.cmake  find_anyproject.cmake  find_extproject.cmake  h4config.h.in  install.cmake  util.cmake
hdf/: CMakeLists.txt
hdf/src/: CMakeLists.txt  atom.c  bitvect.c  cdeflate.c  crle.c  cskphuff.c  cszip.c  dfconv.c  dfimcomp.c  dfknat.c  dfrle.c  dfsd.c  dfstubs.c  glist.c  hbitio.c  hblocks.c  hchunks.c  hcomp.c  hdfalloc.c  hextelt.c  hfile.c  hfiledd.c  hkit.c  mfan.c  mfgr.c  mfgrf.c  tbbt.c  vattr.c  vconv.c  vg.c  vgf.c  vgint.h  vgp.c  vio.c  vparse.c  vrw.c  vsfld.c
hdf/test/: CMakeLists.txt  CMakeTests.cmake
man/: hdfunpac.1
mfhdf/: CMakeLists.txt
mfhdf/libsrc/: CMakeLists.txt  array.c  attr.c  cdf.c  dim.c  file.c  globdef.c  hdfsds.c  iarray.c  mfsd.c  putget.c  putgetg.c  sharray.c  string.c  var.c  xdrposix.c  xdrstdio.c
mfhdf/test/: CMakeLists.txt  CMakeTests.cmake
mfhdf/xdr/: CMakeLists.txt  README  types.h
opt/: folders.csv  postprocess.py  winsock2_define.patch
opt/overwrite/: CMakeInstallation.cmake
opt/overwrite/cmake/ext_mod/: HDFMacros.cmake
release_notes/: RELEASE.txt
